[tool.poetry]
name = "aiorediantic"
version = "0.0.1a0"
description = "This package provides a simple OKVM(Object Key-Value Mapping) for aioredis using pydantic-like models."
authors = ["Prateek Kumar <prateekkumar1393@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
pydantic = {extras = ["email"], version = "^1.10.9"}


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
dirty-equals = "^0.6.0"
coverage = {extras = ["toml"], version = "^7.2.7"}


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ['aiorediantic']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
